@@ -1,5 +1,9 @@
 2006-12-21 Peter Brett   <peter@peter-b.co.uk>
-	
+
+	* include/prototype.h: Comment o_selection_select() and
+	o_selection_unselect() as deprecated (should only be used internally to
+	libgeda).
+
 	* include/prototype.h, src/o_net_basic.c, src/o_selection.c:
 	Update interface of o_selection_add() to match
 	o_selection_remove(). Pass the GList by reference so head can be
