@@ -1,5 +1,8 @@
 2006-12-21 Peter Brett   <peter@peter-b.co.uk>
 
+	* src/o_misc.c: Remove use of o_selection_select() and
+	o_selection_unselect() (should only be used internally to libgeda).
+
 	* src/o_attrib.c, src/o_buffer.c, src/o_complex.c, src/o_copy.c,
 	src/o_misc.c, src/o_select.c, src/o_text.c: Update interface of
 	o_selection_add() to match o_selection_remove(). Pass the GList by
